// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TITLES IN ALL CAPS are fixed 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        

        <h1
          class="ltx_title ltx_title_document"
        >
          Why Am I Shouting
        </h1>
        <div
          class="engrafo-metadata"
        >
          <div
            class="engrafo-metadata-custom"
          />
        </div>
        


        <section
          class="ltx_section"
          id="S1"
        >
          

          <h2
            class="ltx_title ltx_title_section"
          >
            

            <span
              class="ltx_tag ltx_tag_section"
            >
              <a
                href="#S1"
              >
                1 
              </a>
            </span>
            Urgh Stop It
          </h2>
          


          <div
            class="ltx_para"
            id="S1.p1"
          >
            

            <p
              class="ltx_p"
            >
              Hello.
            </p>
            

          </div>
          

        </section>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`bold is stripped from title 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        

        <h1
          class="ltx_title  ltx_title_document"
        >
          Why would someone do this

        </h1>
        <div
          class="engrafo-metadata"
        >
          <div
            class="engrafo-metadata-custom"
          />
        </div>
        


        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            Hello.
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;
